# weather

./: .gitignore  CMakeLists.txt  LICENSE  README.md
sources/: CMakeLists.txt
sources/weather.test/: MainFrame.cpp  MainFrame.h  SelectLocationDlg.cpp  SelectLocationDlg.h  TileSettingsDlg.cpp  TileSettingsDlg.h  main.cpp
sources/weather/include/weather/: CurrentWeatherTile.h  Models.h  WeatherAPI.h
sources/weather/src/weather/: CurrentWeatherTile.cpp  WeatherAPI.cpp
